--- a/backend/backend_project/frontend/static/CSS/admin_dashboard.css
+++ b/backend/backend_project/frontend/static/CSS/admin_dashboard.css
@@ -27,7 +27,7 @@ body {
 }
 
 .confirmation,
-.borrowers-list {
+.list {
     background-color: var(--form-bg-color);
     color: var(--text-color);
     position: fixed;
@@ -39,14 +39,14 @@ body {
 }
 
 .confirmation .img-holder,
-.borrowers-list .img-holder {
-    max-width: 200px;
+.list .img-holder {
+    width: 200px;
     border-radius: 10px;
     overflow: hidden;
 }
 
 .confirmation img:hover,
-.borrowers-list img:hover {
+.list img:hover {
     transform: scale(1.05);
 }
 
@@ -60,7 +60,7 @@ body {
     width: 100%;
 }
 
-.confirm-btns button{
+.confirm-btns button {
     margin: 0% 10%;
 }
 
@@ -75,27 +75,91 @@ body {
     color: var(--primary-color);
 }
 
-.borrowers-list {
+.list {
     display: flex;
     width: 600px;
 }
 
-.borrowers-list .book-details {
+.list .book-details {
     margin-right: 5%;
     margin-left: 5%;
     margin-top: 7%;
 }
 
-.users {
+.users,
+.copies-list {
     background-color: var(--bg-color);
     border-radius: 10px;
     width: 50%;
     display: flex;
     flex-direction: column;
+    position: relative;
     margin-top: 7%;
     padding-top: 10px;
     overflow-y: auto;
-    max-height: 400px;
+    overflow-x: hidden;
+    height: fit-content;
+}
+
+.formats-form .input-header {
+    text-align: left;
+    font-size: 14px;
+    padding-left: 20px;
+    margin-bottom: 5px;
+}
+
+.formats-form input {
+    width: 90%;
+    border: none;
+    border-bottom: 2px solid var(--border-color);
+    color: var(--text-color);
+    font-size: 12px;
+    padding: 5px;
+    margin-bottom: 15px;
+    background-color: var(--bg-color);
+    outline: none;
+    transition: all 0.3s ease;
+}
+
+.availability {
+    display: flex;
+    font-size: 12px;
+    margin-bottom: 15px;
+}
+
+/* For Checkbox */
+.availability input {
+    position: absolute;
+    left: 45%;
+    transform: scale(1.4);
+}
+
+.availability label {
+    text-align: left;
+    width: 100%;
+    padding-left: 25px;
+}
+
+.formats-form input:focus {
+    border-bottom: 2px solid var(--primary-color);
+    padding-top: 10px;
+    align-items: center;
+    outline: none;
+}
+
+.save-copies {
+    background-color: var(--primary-color);
+    color: var(--font-primary);
+    font-size: 16px;
+    border: none;
+    border-radius: 6px;
+    padding: 3px 6px;
+    margin: 20px 0px;
+    width: 60px;
+}
+
+.save-copies:hover {
+    background-color: var(--primary-hover);
 }
 
 .no-users {
@@ -204,7 +268,7 @@ h4 {
     margin-bottom: 10px;
 }
 
-.id {
+.isbn {
     font-weight: bold;
 }
 
@@ -487,13 +551,13 @@ h4 {
     transition: all 0.3s ease;
 } */
 
-.img-holder img{
+.img-holder img {
     width: 100%;
     height: 100%;
     transition: all 0.3s ease;
 }
 
-.book:hover  .img-holder img {
+.book:hover .img-holder img {
     transform: scale(1.05);
 }
 
@@ -620,6 +684,17 @@ a {
     right: 10px;
 }
 
+.copies {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+    border: none;
+    position: absolute;
+    width: fit-content;
+    padding: 3px;
+    bottom: 10px;
+    left: 10px;
+}
+
 .borrowers-list-btn {
     display: flex;
     align-items: center;
@@ -627,8 +702,9 @@ a {
     color: var(--font-primary);
     border: none;
     position: absolute;
+    padding: 3px;
     bottom: 10px;
-    left: 70px;
+    right: 10px;
     width: fit-content;
 }
 
@@ -638,9 +714,12 @@ a {
 
 .search-btn:hover,
 .borrowers-list-btn:hover,
+.copies:hover,
 .books-pages button:hover {
     background-color: var(--primary-hover);
     color: var(--text-color);
+    border: none;
+    outline: none;
 }
 
 .edit:hover,
@@ -709,7 +788,7 @@ a {
         height: 45px;
     }
 
-    .borrowers-list {
+    .list {
         top: 10%;
         bottom: 10%;
         flex-direction: column;
@@ -717,13 +796,15 @@ a {
         width: 300px;
     }
 
-    .borrowers-list .book-details {
+    .list .book-details {
         margin-right: 5%;
     }
 
-    .users {
+    .users,
+    .copies-list {
         width: 100%;
         max-height: 250px;
+        margin-left: 0%;
     }
 }
 
