--- a/backend/backend_project/frontend/static/CSS/books.css
+++ b/backend/backend_project/frontend/static/CSS/books.css
@@ -251,12 +251,22 @@
     text-decoration: none;
     font-size: 0.9rem;
     transition: all 0.3s ease;
+    height: 35px;
+    line-height: 1.2;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+   margin-right: 20px ;
+
 }
 
 .details-btn {
     background-color: transparent;
     border: 1px solid var(--primary-color);
     color: var(--primary-color);
+    height: 35px;
+    margin-right: 20px ;
+    margin-left: 20px ;
 }
 
 .details-btn:hover {
