--- a/backend/backend_project/frontend/templates/frontend/index.html
+++ b/backend/backend_project/frontend/templates/frontend/index.html
@@ -35,6 +35,12 @@
             <li><a href="{% url 'sign_in' %}" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
             <li><a href="{% url 'sign_up' %}" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
             <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+          <li>
+              <form action="{% url 'logout' %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+              </form>
+          </li>
           </ul>
         </nav>
         <button class="menu-toggle"><i class="fas fa-bars"></i></button>
@@ -50,6 +56,12 @@
           <li><a href="{% url 'sign_in' %}" id="login-link"><i class="fas fa-sign-in-alt"></i> Login</a></li>
           <li><a href="{% url 'sign_up' %}" id="register-link"><i class="fas fa-user-plus"></i> Register</a></li>
           <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+          <li>
+              <form action="{% url 'logout' %}" method="post">
+              {% csrf_token %}
+              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+              </form>
+          </li>
         </ul>
     </div>
 
@@ -127,18 +139,6 @@
 
         </div>
       </section>
-
-      <section class="newsletter">
-        <div class="newsletter-content">
-          <h2>Stay Updated</h2>
-          <p>Subscribe to our newsletter for new arrivals, reading
-            recommendations, and library news.</p>
-          <form class="newsletter-form">
-            <input type="email" placeholder="Your email address" required>
-            <button type="submit" class="btn primary-btn">Subscribe</button>
-          </form>
-        </div>
-      </section>
     </main>
 
     <footer>
@@ -165,7 +165,7 @@
 <!--             <li><a href="./frontend/pages/borrowed.html">borrow page</a></li> -->
 <!--             <li><a href="./frontend/pages/admin_dashboard.html">admin board</a></li> -->
 <!--             <li><a href="./frontend/pages/profile.html">profile</a></li> -->
-                  
+
           </ul>
         </div>
         <div class="footer-section">
@@ -185,7 +185,7 @@
     </footer>
 
     <!-- JavaScript Files -->
-    <script src="{% static 'Script/await.js' %}"></script> 
+    {% comment %} <script src="{% static 'Script/await.js' %}"></script>  {% endcomment %}
     <script src="{% static 'Script/theme.js' %}"></script>
     <script src="{% static 'Script/header.js' %}"></script>
     <script src="{% static 'Script/footer.js' %}"></script>
