--- a/backend/backend_project/frontend/templates/frontend/pages/book_details.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/book_details.html
@@ -11,7 +11,8 @@
         <link rel="stylesheet" href="{% static 'CSS/footer.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/header.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/_variables.css' %}">
-        
+        <link rel="stylesheet" href="{% static 'CSS/index.css' %}">
+
     </head>
 
     <body class="bodyStyle">
