--- a/backend/backend_project/frontend/templates/frontend/pages/books.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/books.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{% static 'CSS/footer.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/index.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/books.css' %}">
+
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +20,7 @@
         <link rel="icon"
             href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📖</text></svg>">
         <title>Book Catalog - Online Library</title>
+
     </head>
 
     <body>
@@ -33,7 +35,12 @@
                         <li><a href="{% url 'user_dashboard' %}"><i class="fas fa-home"></i> Home</a></li>
                         <li><a href="{% url 'profile' %}"><i class="fas fa-user"></i> Profile</a></li>
                         <li><a href="{% url 'books' %}" class="active"><i class="fas fa-book"></i> Books</a></li>
-                        <li><a href="{% url 'home' %}#features"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                          <li>
+                              <form action="{% url 'logout' %}" method="post">
+                              {% csrf_token %}
+                              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+                              </form>
+                          </li>
                         <li><a href="{% url 'borrowed' %}#features"><i class="fas fa-bookmark"></i> borrow list</a></li>
                         <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
                     </ul>
@@ -48,7 +55,12 @@
             <ul class="mobile-nav">
                 <li><a href="#hero"><i class="fas fa-home"></i> Home</a></li>
                 <li><a href="{% url 'books' %}" class="active"><i class="fas fa-book"></i> Books</a></li>
-                <li><a href="{% url 'home' %}#features"><i class="fas fa-sign-out-alt"></i> Log Out</a></li>
+                  <li>
+                      <form action="{% url 'logout' %}" method="post">
+                      {% csrf_token %}
+                      <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+                      </form>
+                  </li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
             </ul>
         </div>
