--- a/backend/backend_project/frontend/templates/frontend/pages/borrowed.html
+++ b/backend/backend_project/frontend/templates/frontend/pages/borrowed.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="{% static 'CSS/footer.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/index.css' %}">
         <link rel="stylesheet" href="{% static 'CSS/borrowed.css' %}">
+        <link rel="stylesheet" href="{% static 'CSS/index.css' %}">
+
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,9 +45,12 @@
                                     class="fas fa-user"></i> Account</a></li>
                         <li><a href="#contact"><i class="fas fa-envelope"></i>
                                 Contact</a></li>
-                        <li><a href="{% url 'logout' %}"><i
-                                    class="fas fa-sign-out-alt"></i>
-                                Logout</a></li>
+                          <li>
+                              <form action="{% url 'logout' %}" method="post">
+                              {% csrf_token %}
+                              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+                              </form>
+                          </li>
                     </ul>
                 </nav>
                 <button class="menu-toggle">
@@ -66,8 +71,12 @@
                         Account</a></li>
                 <li><a href="#contact"><i class="fas fa-envelope"></i>
                         Contact</a></li>
-                <li><a href="{% url 'logout' %}"><i
-                            class="fas fa-sign-out-alt"></i> Logout</a></li>
+                          <li>
+                              <form action="{% url 'logout' %}" method="post">
+                              {% csrf_token %}
+                              <button type="submit" class="btn primary-btn" ><i class="fas fa-sign-out-alt"></i> Logout</button>
+                              </form>
+                          </li>
             </ul>
         </div>
 
