--- a/frontend/CSS/add_edit.css
+++ b/frontend/CSS/add_edit.css
@@ -73,23 +73,22 @@ body {
     box-shadow: 0px 0px 15px var(--shadow-color);
 }
 
+form {
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+}
+
 .book-details {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
     gap: 5vw;
     width: 100%;
-    overflow: hidden;
-}
-
-.details-form {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 45%;
-    border-radius: 10px;
-    margin: 0px 10px 30px;
+    height: fit-content;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
 }
 
 .back-btn button {
@@ -118,7 +117,6 @@ body {
     flex-direction: column;
     width: 38%;
     height: 100%;
-    margin: 2.5%;
 }
 
 .img-holder {
@@ -182,6 +180,11 @@ body {
     color: #C2352A;
     font-weight: bold;
     font-size: 12px;
+}
+
+.all-fields {
+    width: 44%;
+    margin-left: 2.5%;
 }
 
 .field,
@@ -309,6 +312,10 @@ select:focus {
     
     .img-holder p {
         font-size: 3px;
+    }
+
+    .book-details {
+        flex-direction: column;
     }
 }
 
